<resources>
    <string name="app_name">家政服务</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="emergency_services">应急服务</string>
    <string name="emergency_order">应急订单</string>
    <string name="service_type">服务类型</string>
    <string name="state">状态</string>
    <string name="address">地址</string>
    <string name="place_an_order_time">下单时间</string>
    <string name="price">￥价格</string>
    <string name="button_left">左按钮</string>
    <string name="button_right">右按钮</string>
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

</resources>
