<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:id="@+id/view4"
        style="@style/bg_line"
        android:focusable="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/image_id_1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:focusable="false"
            android:src="@mipmap/type" />

        <TextView
            android:id="@+id/Typeface_ServiceType"
            style="@style/Typeface_ServiceType"
            android:layout_weight="8"
            android:focusable="false"
            android:text="@string/service_type" />

        <TextView
            android:id="@+id/State"
            style="@style/State"
            android:layout_weight="2"
            android:focusable="false"
            android:text="@string/state" />


    </LinearLayout>


    <View
        android:id="@+id/view1"
        style="@style/bg_line"
        android:focusable="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_id_2"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:focusable="false"
            android:src="@mipmap/location" />


        <TextView
            android:id="@+id/tv_address"
            style="@style/Typeface_ServiceType"
            android:layout_weight="11"
            android:focusable="false"
            android:text="@string/address" />

    </LinearLayout>

    <View
        android:id="@+id/view2"
        style="@style/bg_line"
        android:focusable="false" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/place_an_order"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:focusable="false"
            android:src="@mipmap/place_an_order" />

        <TextView
            android:id="@+id/order_textview_5"
            style="@style/Typeface_ServiceType"
            android:layout_weight="10"
            android:focusable="false"
            android:text="@string/place_an_order_time" />

    </LinearLayout>

    <View
        android:id="@+id/view3"
        style="@style/bg_line"
        android:focusable="false" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/price"
            style="@style/price"
            android:layout_marginTop="5dp"
            android:layout_weight="12"
            android:focusable="false"
            android:text="@string/price" />

        <Button
            android:id="@+id/button_left"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/shape_green"
            android:focusable="false"
            android:layout_gravity="right"
            android:text="@string/button_left" />
        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_right"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/shape_green"
            android:focusable="false"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_right" />


    </LinearLayout>
</LinearLayout>